apps/garage-ui/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  name: authentik
  namespace: garage
spec:
  forwardAuth:
    address: http://authentik-server.authentik.svc.cluster.local/outpost.goauthentik.io/auth/traefik
    authResponseHeaders:
      - X-authentik-username
      - X-authentik-groups
      - X-authentik-email
      - X-authentik-name
      - X-authentik-uid
    trustForwardHeader: true
