apps/garage-ui/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "2"
  name: garage-ui
  namespace: garage
spec:
  hostnames:
    - garage.whyredfire.dev
  parentRefs:
    - kind: Gateway
      name: traefik-gateway
      namespace: traefik
      sectionName: websecure
  rules:
    - backendRefs:
        - name: authentik-server
          namespace: authentik
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /outpost.goauthentik.io
    - backendRefs:
        - name: garage-ui
          port: 80
      filters:
        - extensionRef:
            group: traefik.io
            kind: Middleware
            name: authentik
          type: ExtensionRef
      matches:
        - path:
            type: PathPrefix
            value: /
